--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
 }
 
 .task-form {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -62,9 +63,10 @@ body {
 .task-input {
   flex-grow: 1;
   height: 45px;
-  line-height: 25px;
   padding: 10px 20px;
   font-family: inherit;
+  color: rgb(94, 84, 84);
+  line-height: 25px;
   background-color: transparent;
   border: none;
   border-bottom: 1px solid #000000;
@@ -167,18 +169,13 @@ body {
   cursor: pointer;
 }
 
-/* .task-list-item:nth-child(even) {
-  background-color: rgb(173, 252, 198);
-} */
-
 .task-list-item:hover,
 .task-list-item:focus {
   opacity: 0.65;
 }
 
-/* FIX CLICK ON SPAN !!!!!!!!!!!!!!!!!!!!!!!! */
 .task-content {
-  color: rgb(78, 70, 70);
+  color: rgb(94, 84, 84);
 }
 
 .delete-btn {
@@ -224,7 +221,7 @@ body {
 
 .delete-btn:hover,
 .delete-btn:focus {
-  transform: scale(1.3);
+  transform: scale(1.4);
 }
 
 .clear-tasks-btn {
@@ -240,11 +237,22 @@ body {
 .clear-tasks-btn:hover,
 .clear-tasks-btn:focus {
   background-color: #e61717;
-  box-shadow: 5px 5px #dd8080;
+  box-shadow: 5px 5px #e48b8b;
 }
 
 .clear-tasks-btn:active {
   opacity: 0.7;
+}
+
+.task-input-tips {
+  position: absolute;
+  top: 70px;
+  left: 5px;
+  display: none;
+  width: 100%;
+  font-size: 12px;
+  font-style: italic;
+  color: rgb(89, 139, 106);
 }
 
 .done-task {
